<resources>
    <string name="app_name">E-Lapor</string>
    <string name="title_karyawan">Halamankaryawan</string>
    <string name="selamat_datang">Selamat datang</string>
    <string name="admin">Site Manager</string>
    <string name="pegawai">Pegawai</string>
    <string name="lap_harian">Lap. Harian</string>
    <string name="lap_bulanan">Lap. Bulanan</string>
    <string name="lihat_semua">Lihat Semua</string>
    <string name="info">Informasi di atas menunjukkan total dari seluruh masing-masing data pada bulan ini</string>
    <string name="kelola_data">Kelola data</string>
    <string name="tambah_nkota">Tambah\nKota</string>
    <string name="tambah_nuser">Tambah\nKaryawan</string>
    <string name="tambah_noutlet">Tambah\nOutlet</string>
    <string name="rekap_nlaporan">Rekap\nLaporan</string>
    <string name="informasi_kepegawaian">Informasi Kepegawaian</string>
    <string name="username_atau_nip">Username atau NIP</string>
    <string name="password">Password</string>
    <string name="log_in">Log In</string>
    <string name="pt_samudra_solusindo">PT Samudra Solusindo</string>
    <string name="e_lapor_pt_samudra_solusindo">E-Lapor PT Samudra Solusindo</string>
    <string name="pilih_karyawan">Pilih Karyawan</string>
    <string name="namakota">Masukkan Nama Kota</string>
    <string name="waktu_rekap">"Pilih Waktu "</string>
    <string name="title_activity_main">Main</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="AKSI_HAPUS">hapus</string>
    <string name="AKSI_UBAH">ubah</string>
    <string name="AKSI_TAMBAH">tambah</string>
    <string name="karyawan">Karyawan</string>
    <string name="nama_karyawan">Nama Karyawan</string>
    <string name="data_kota">Data\nKota</string>
    <string name="data_outlet">Data\nOutlet</string>
    <string name="nama_outlet">Nama Outlet</string>
    <string name="alamat_laporan">Alamat Laporan</string>
    <string name="keterangan">Keterangan</string>
    <string name="tanggal_laporan">Tanggal Laporan</string>
    <string name="waktu_laporan">Waktu Laporan</string>
    <string name="tolak">Tolak</string>
    <string name="terima">Terima</string>
    <string name="isi_laporan">Isi Laporan</string>
    <string name="masukan_nama_outlet">Masukan Nama Outlet</string>
    <string name="pilih_kota">Pilih Kota</string>
    <string name="simpan">Simpan</string>
    <string name="daftar_karyawan">Daftar Karyawan</string>
    <string name="info_rekap">Pilih data yang akan di lihat rekapan laporanya</string>
    <string name="cari_data_rekapan">Cari Data Rekapan</string>
    <string name="bulanan">Laporan Bulanan</string>
    <string name="laporan_harian">Laporan\nHarian</string>
    <string name="laporan_bulanan">Laporan\nBulanan</string>
    <string name="edit_profil">Edit\nProfil</string>
    <string name="ubah_password">Ubah Password</string>
    <string name="ubah_profil">Ubah Profil</string>
    <string name="action_geolocate">Pick Place</string>
    <string name="default_info_title">Default Location</string>
    <string name="default_info_snippet">No places found, because location permission is disabled.</string>
    <string name="tambahharian">Tambah Laporan\nHarian</string>
    <string name="tambahbulanan">Tambah Laporan\nBulanan</string>
    <string name="editprofil">Edit\nProfil Saya</string>
    <string name="lokasi">Lokasi</string>
    <string name="edit">Ubah</string>
    <string name="bukti_laporan">Bukti Laporan</string>
    <string name="rekapan_nlaporan_saya">Rekapan\nLaporan Saya</string>
    <string name="outlet">Outlet</string>
    <string name="masukkan_alamat_laporan">Masukkan Alamat Laporan</string>
    <string name="masukkan_keterangan_laporan">Masukkan Keterangan Laporan</string>
    <string name="masukkan_isi_laporan_baru">Masukkan Isi Laporan Baru</string>
    <string name="lainnya">Penngaturan</string>
</resources>
