<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.myapp.laporankaryawan.ui.tambahlaporanharian.TambahLaporanHarian">

    <data>

        <variable
            name="isLoading"
            type="boolean" />

        <variable
            name="outlet"
            type="com.myapp.domain.model.OutletModel" />

        <variable
            name="alamat"
            type="String" />

        <variable
            name="image"
            type="String" />

        <variable
            name="pick"
            type="com.myapp.laporanadmin.callback.PickImage" />

        <variable
            name="pickAlamat"
            type="com.myapp.laporankaryawan.callback.PickAlamat" />

        <variable
            name="pickOutlet"
            type="com.myapp.laporankaryawan.callback.PickOutlet" />

        <variable
            name="vm"
            type="com.myapp.laporankaryawan.ui.tambahlaporanharian.TambahLaporanHarianViewModel" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:theme="@style/ThemeOverlay.AppCompat.Dark"
                app:popupTheme="@style/Theme.AppCompat.Light" />
        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingStart="@dimen/sp_16"
                android:layout_marginTop="@dimen/padding_10"
                android:paddingEnd="@dimen/sp_16">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/outlet"
                    android:textStyle="bold"
                    android:paddingTop="@dimen/dp_8"
                    android:textColor="@color/colorPrimary" />

                <EditText
                    android:id="@+id/et_outlet"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/gray_muda_banget"
                    android:inputType="text"
                    android:padding="@dimen/dp_16"
                    android:gravity="top"
                    android:textSize="@dimen/sp_14"
                    android:focusable="false"
                    android:onClick="@{()->pickOutlet.onPick()}"
                    android:singleLine="false"
                    android:textColor="@color/black_tua_hehe"
                    android:layout_marginTop="@dimen/dp_4"
                    android:text="@={outlet.namaOutlet}"
                    android:hint="Pilih Outlet " />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/alamat_laporan"
                    android:textStyle="bold"
                    android:paddingTop="@dimen/dp_8"
                    android:textColor="@color/colorPrimary" />

                <EditText
                    android:id="@+id/et_alamat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/gray_muda_banget"
                    android:inputType="textCapSentences|textMultiLine"
                    android:padding="@dimen/dp_16"
                    android:gravity="top"
                    android:minHeight="@dimen/dp_80"
                    android:textSize="@dimen/sp_14"
                    android:focusable="false"
                    android:onClick="@{(v)->pickAlamat.pickAlamat(v)}"
                    android:textColor="@color/black_tua_hehe"
                    android:layout_marginTop="@dimen/dp_4"
                    android:text="@={alamat}"
                    android:hint="@string/masukkan_alamat_laporan" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/keterangan"
                    android:textStyle="bold"
                    android:paddingTop="@dimen/dp_8"
                    android:textColor="@color/colorPrimary" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/gray_muda_banget"
                    android:inputType="textMultiLine"
                    android:padding="@dimen/dp_16"
                    android:minHeight="@dimen/dp_80"
                    android:gravity="top"
                    android:textSize="@dimen/sp_14"
                    android:singleLine="false"
                    android:textColor="@color/black_tua_hehe"
                    android:layout_marginTop="@dimen/dp_4"
                    android:text="@={vm.isi}"
                    android:hint="@string/masukkan_keterangan_laporan" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/bukti_laporan"
                    android:textStyle="bold"
                    android:paddingTop="@dimen/dp_8"
                    android:textColor="@color/colorPrimary" />

                <ImageView
                    android:id="@+id/iv_bukti"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:scaleType="centerCrop"
                    android:adjustViewBounds="true"
                    android:layout_marginBottom="@dimen/padding_10"
                    android:onClick="@{(v)->pick.ImageClicked(v)}"
                    setImageUrl="@{image}"
                    android:src="@drawable/ic_user2" />


                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/padding_10"
                    style="?android:attr/borderlessButtonStyle"
                    android:textColor="@color/white"
                    android:textAllCaps="false"
                    android:textSize="@dimen/sp_16"
                    android:background="@drawable/ripple_primary"
                    android:clickable="true"
                    viewGone="@{!isLoading}"
                    android:onClick="@{()->vm.simpan()}"
                    android:text="Simpan" />

                <ProgressBar
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    viewGone="@{isLoading}"
                    android:layout_gravity="center" />
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</layout>