<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.rekapan.HalamanPilihRekapan">

    <data>

        <variable
            name="isLoading"
            type="boolean" />

        <variable
            name="karyawan"
            type="com.myapp.domain.model.UserModel" />

        <variable
            name="tanggal"
            type="String" />

        <variable
            name="event"
            type="com.myapp.laporanadmin.callback.HalamanRekapanCallback" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:theme="@style/ThemeOverlay.AppCompat.Dark"
                app:popupTheme="@style/Theme.AppCompat.Light" />
        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="@dimen/dp_16"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/tv_karyawan"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/gray_muda_banget"
                    android:hint="@string/pilih_karyawan"
                    android:inputType="text"
                    android:padding="@dimen/dp_16"
                    android:gravity="top"
                    android:textSize="@dimen/sp_14"
                    android:singleLine="false"
                    android:textColor="@color/black_tua_hehe"
                    android:layout_marginTop="@dimen/dp_4"
                    android:focusable="false"
                    android:onClick="@{(v)->event.onSelectKaryawan(v)}"
                    android:text="@={karyawan.namaUser}" />

                <EditText
                    android:id="@+id/tv_tanggal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/gray_muda_banget"
                    android:hint="@string/waktu_rekap"
                    android:inputType="text"
                    android:padding="@dimen/dp_16"
                    android:gravity="top"
                    android:textSize="@dimen/sp_14"
                    android:singleLine="false"
                    android:textColor="@color/black_tua_hehe"
                    android:layout_marginTop="@dimen/dp_4"
                    android:focusable="false"
                    android:onClick="@{(v)->event.onSelectBulan(v)}"
                    android:text="@={tanggal}" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_8"
                    style="?android:attr/borderlessButtonStyle"
                    android:textColor="@color/white"
                    android:textAllCaps="false"
                    android:textSize="@dimen/sp_16"
                    android:background="@drawable/ripple_primary"
                    android:clickable="true"
                    viewGone="@{!isLoading}"
                    android:onClick="@{(v)->event.onSync(v)}"
                    android:text="@string/cari_data_rekapan"
                    android:focusable="true" />

                <ProgressBar
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    viewGone="@{isLoading}"
                    android:layout_gravity="center" />

                <com.todkars.shimmer.ShimmerRecyclerView
                    android:id="@+id/rv"
                    android:layout_below="@+id/tv_karyawan"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp"
                    android:orientation="vertical"
                    showShimmer="@{isLoading}"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:shimmer_recycler_item_count="2"
                    app:shimmer_recycler_layout="@layout/item_shimmer_karyawan" />

                <LinearLayout
                    viewGone="@{!isLoading}"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dp_200"
                        android:text="@string/info_rekap"
                        android:textAlignment="center" />
                </LinearLayout>
            </LinearLayout>

        </androidx.core.widget.NestedScrollView>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</layout>